# nw-snd

./: CMakeLists.txt  Readme.md
src/: bfwav.cpp
src/include/nw/snd/: bfstm.h  bfwav.h
tests/: CMakeLists.txt
tests/src/: main.cpp
